# plugin_install

./: README.md
InstallProgram/: config.py  image.qrc  main.py  package_bundler.ps1  pyproject.toml  resource_rc.py
InstallProgram/pages/: __init__.py  already_install.py  base.py  finish.py  install.py  start.py  uninstall.py
InstallProgram/utils/: __init__.py  path.py
InstallProgram/widgets/: progress.py
